[gd_scene load_steps=25 format=3 uid="uid://cact5ekngqppp"]

[ext_resource type="Texture2D" uid="uid://duvf85rqhk58d" path="res://assets/Knight/noBKG_KnightAttack_strip.png" id="1_0qe3o"]
[ext_resource type="Script" path="res://scenes/knight.gd" id="1_n7bkn"]
[ext_resource type="Texture2D" uid="uid://4wmglfig56s3" path="res://assets/Knight/noBKG_KnightRun_strip.png" id="3_plht4"]
[ext_resource type="AudioStream" uid="uid://chvc082r273w3" path="res://assets/sounds/impactPunch_medium_002.ogg" id="4_7ccnh"]
[ext_resource type="AudioStream" uid="uid://bv5pyl2ny4e5f" path="res://assets/sounds/snow_footstep_cut.ogg" id="5_84chh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mgmp"]
size = Vector2(17, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dljm"]
atlas = ExtResource("1_0qe3o")
region = Rect2(0, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02yk"]
atlas = ExtResource("1_0qe3o")
region = Rect2(144, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wldy"]
atlas = ExtResource("1_0qe3o")
region = Rect2(288, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ch80"]
atlas = ExtResource("1_0qe3o")
region = Rect2(432, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8n2i"]
atlas = ExtResource("1_0qe3o")
region = Rect2(576, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_365q6"]
atlas = ExtResource("1_0qe3o")
region = Rect2(720, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_veb41"]
atlas = ExtResource("1_0qe3o")
region = Rect2(864, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlrmo"]
atlas = ExtResource("1_0qe3o")
region = Rect2(1008, 0, 144, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vla7"]
atlas = ExtResource("3_plht4")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucies"]
atlas = ExtResource("3_plht4")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crk4h"]
atlas = ExtResource("3_plht4")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcsv6"]
atlas = ExtResource("3_plht4")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1cin"]
atlas = ExtResource("3_plht4")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r6xn"]
atlas = ExtResource("3_plht4")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quw4h"]
atlas = ExtResource("3_plht4")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdi54"]
atlas = ExtResource("3_plht4")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c3yq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dljm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wldy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ch80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8n2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_365q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veb41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlrmo")
}],
"loop": false,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vla7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crk4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcsv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1cin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r6xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quw4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdi54")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rd1hm"]
height = 50.0

[node name="Knight" type="CharacterBody2D"]
script = ExtResource("1_n7bkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_3mgmp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c3yq1")
animation = &"Run"
autoplay = "Run"
frame_progress = 0.208786

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rd1hm")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7ccnh")

[node name="WalkingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_84chh")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
